--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,32 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <!--#689F38-->
+    <color name="hy_primary_color">#239cff</color>
+
+
+    <!--<color name="conversation_background">#fcfcfc</color>-->
+    <!--<color name="conversation_edge_effect">#9d9d9d</color>-->
+    <!--<color name="compose_message_send_color">@color/primary_color</color>-->
+    <!--<color name="compose_message_send_color_pressed">#999999</color>-->
+    <!--<color name="message_bubble_color_outgoing">#80689F38</color>-->
+    <!--<color name="message_error_bubble_color_incoming">#e2e2e2</color>-->
+    <color name="hy_message_audio_button_color_incoming">#80689F38</color>
+    <!--<color name="hy_message_audio_button_background_color">#ffffffff</color>-->
+    <!--<color name="message_bubble_color_selected">#e5e5e5</color>-->
+    <!--<color name="message_image_selected_tint">#80689F38</color>-->
+    <!--<color name="generic_video_icon">#ff808080</color>-->
+
+    <color name="hy_message_text_color_incoming">#ff323232</color>
+    <color name="hy_message_text_color_outgoing">#ffffffff</color>
+
+    <!--<color name="audio_picker_level_primary_color">#29000000</color>-->
+    <!--<color name="audio_record_control_button_stroke">#30000000</color>-->
+    <!--<color name="audio_picker_hint_text_color">#40000000</color>-->
+    <!--<color name="audio_picker_timer_text_color">#323232</color>-->
+    <color name="hy_audio_attachment_timer_text_color">#323232</color>
+    <!--<color name="audio_progress_bar_color">@color/primary_color</color>-->
+
+
 </resources>
